--- a/admin.html
+++ b/admin.html
@@ -827,7 +827,7 @@
 
     <!-- Capacidade -->
     <div class="card">
-      <h3 style="margin-top: 0; display: flex; align-items: center; gap: 10px;"><span class="icon-wrapper">📊</span> Capacidade dos Aprofundamentos</h3>
+      <h3 style="margin-top: 0; display: flex; align-items: center; gap: 10px;"><span class="icon-wrapper">📊</span> Capacidade das Práticas Integradoras</h3>
       <div class="capacity-grid" id="capGrid"></div>
     </div>
   </div>
