--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Admin • Práticas Integradoras 1 2025.2</title>
+<title>Admin • Práticas Integradoras 1 • 2025.2</title>
 
 <!-- Bibliotecas para exportação -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -777,7 +777,7 @@
       </div>
     </div>
 
-    <!-- Tabela de Inscrições -->
+    <!-- Tabela de Inscrições Registradas -->
     <div class="table-container">
       <div class="table-header">
         <div class="table-title"><span class="icon-wrapper">📋</span> Inscrições</div>
@@ -827,7 +827,7 @@
 
     <!-- Capacidade -->
     <div class="card">
-      <h3 style="margin-top: 0; display: flex; align-items: center; gap: 10px;"><span class="icon-wrapper">📊</span> Capacidade das Práticas Integradoras</h3>
+      <h3 style="margin-top: 0; display: flex; align-items: center; gap: 10px;"><span class="icon-wrapper">📊</span> Capacidade das Práticas Integradoras 1</h3>
       <div class="capacity-grid" id="capGrid"></div>
     </div>
   </div>
