--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Práticas Integradoras 1 2025.2</title>
+  <title>Práticas Integradoras 1 • 2025.2</title>
   <style>
     :root { 
       --bg: #0e0f13; 
@@ -376,14 +376,14 @@
     <header>
       <h1><span class="icon-wrapper">🎓</span> Práticas Integradoras 1 2025.2</h1>
       <p class="sub">Preencha o formulário abaixo para garantir sua vaga.<br>
-      <strong>Cada prática tem limite de vagas</strong> — não perca tempo!</p>
+      <strong>Cada prática tem limite de vagas</strong> - não perca tempo!</p>
     </header>
 
     <form id="form">
       <div class="field">
         <label for="nome"><span class="icon-wrapper">👤</span> Nome Completo</label>
         <input id="nome" name="nome" type="text" placeholder="Digite seu nome completo" required />
-        <div class="hint">Informe seu nome completo conforme documentos oficiais</div>
+        <div class="hint">Informe seu nome completo</div>
       </div>
 
       <div class="row">
